make long text wrap properly

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
             <section class="store-user mt-5">
                 <div class="col-10">
                     <div class="row bb pb-3">
-                        <div class="col-7">
+                        <div class="col-6">
                             <p>Denis Mwiti,</p>
                             <h2>Netpap</h2>
                             <p class="address"> P.O Box 123, <br> Nairobi, Kenya <br>mwitidenis4@gmail.com </p>
                             <div class="txn mt-2">Tel: +254706413234</div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-6">
                             <p>Client,</p>
-                            <h2>Client Name</h2>
+                            <h2>Elpida Networks Today</h2>
                             <p class="address"> P.O Box 456, <br> Somewhere, World <br>client@mail.com </p>
                             <div class="txn mt-2">Tel: 123456894</div>
                         </div>
